[package]
name = "vxlapi-rs"
version = "0.1.0"
authors = ["kyuvie"]
edition = "2021"
description = "A wrapper of vxlapi"
readme = "README.md"
keywords = ["vxlapi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win32console = "0.1.5"
once_cell = "1.18.0"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
]
